KUBE/EKS-DEPLOYMENT/APP-1/kube/db-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-db
  

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1-db

  template:
    metadata:
      labels:
        app: app1-db

    spec:
      containers:
        - name: mariadb
          image: docker.io/payalkharat/kubernetes-ingress:app-1-db-v2

          ports:
            - containerPort: 3306

          args:
            - --default-authentication-plugin=mysql_native_password

          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql

      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: app1-db-pvc
