KUBE/EKS-DEPLOYMENT/APP-1/kube/db-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: app1-db


spec:
  type: ClusterIP

  selector:
    app: app1-db

  ports:
    - port: 3306
      targetPort: 3306
