KUBE/EKS-DEPLOYMENT/APP-1/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend
  

spec:
  type: ClusterIP

  selector:
    app: app1-frontend

  ports:
    - port: 80
      targetPort: 80
